compile_log_3.txt
Processing LILYGO-T-Dongle-S3 (board: esp32-s3-devkitc-1; platform: https://github.com/platformio/platform-espressif32.git; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
Compressed data written to src/html/bootstrapMinCss.h
Compressed data written to src/html/bootstrapMinJs.h
Compressed data written to src/html/stylesMinCss.h
Compressed data written to src/html/scriptMinJs.h
Compressed data written to src/html/indexHtml.h
Compressed data written to src/html/manualHtml.h
Compressed data written to src/html/vnc/indexhtml.h
Compressed data written to src/html/vnc/error_handlerjs.h
Compressed data written to src/html/vnc/localizationjs.h
Compressed data written to src/html/vnc/uijs.h
Compressed data written to src/html/vnc/webutiljs.h
Compressed data written to src/html/vnc/altsvg.h
Compressed data written to src/html/vnc/clipboardsvg.h
Compressed data written to src/html/vnc/connectsvg.h
Compressed data written to src/html/vnc/ctrlsvg.h
Compressed data written to src/html/vnc/ctrlaltdelsvg.h
Compressed data written to src/html/vnc/disconnectsvg.h
Compressed data written to src/html/vnc/dragsvg.h
Compressed data written to src/html/vnc/errorsvg.h
Compressed data written to src/html/vnc/escsvg.h
Compressed data written to src/html/vnc/expandersvg.h
Compressed data written to src/html/vnc/fullscreensvg.h
Compressed data written to src/html/vnc/handlesvg.h
Compressed data written to src/html/vnc/handle_bgsvg.h
Compressed data written to src/html/vnc/infosvg.h
Compressed data written to src/html/vnc/keyboardsvg.h
Compressed data written to src/html/vnc/powersvg.h
Compressed data written to src/html/vnc/settingssvg.h
Compressed data written to src/html/vnc/tabsvg.h
Compressed data written to src/html/vnc/toggleextrakeyssvg.h
Compressed data written to src/html/vnc/warningsvg.h
Compressed data written to src/html/vnc/windowssvg.h
Compressed data written to src/html/vnc/novnc_icon_smsvg.h
Compressed data written to src/html/vnc/novnc_iconsvg.h
Compressed data written to src/html/vnc/novnc_ios_120png.h
Compressed data written to src/html/vnc/novnc_ios_152png.h
Compressed data written to src/html/vnc/novnc_ios_167png.h
Compressed data written to src/html/vnc/novnc_ios_180png.h
Compressed data written to src/html/vnc/novnc_ios_40png.h
Compressed data written to src/html/vnc/novnc_ios_58png.h
Compressed data written to src/html/vnc/novnc_ios_60png.h
Compressed data written to src/html/vnc/novnc_ios_80png.h
Compressed data written to src/html/vnc/novnc_ios_87png.h
Compressed data written to src/html/vnc/novnc_ios_iconsvg.h
Compressed data written to src/html/vnc/novncico.h
Compressed data written to src/html/vnc/bellmp3.h
Compressed data written to src/html/vnc/belloga.h
Compressed data written to src/html/vnc/basecss.h
Compressed data written to src/html/vnc/inputcss.h
Compressed data written to src/html/vnc/Orbitron700ttf.h
Compressed data written to src/html/vnc/Orbitron700woff.h
Compressed data written to src/html/vnc/base64js.h
Compressed data written to src/html/vnc/deflatorjs.h
Compressed data written to src/html/vnc/desjs.h
Compressed data written to src/html/vnc/displayjs.h
Compressed data written to src/html/vnc/encodingsjs.h
Compressed data written to src/html/vnc/inflatorjs.h
Compressed data written to src/html/vnc/ra2js.h
Compressed data written to src/html/vnc/rfbjs.h
Compressed data written to src/html/vnc/websockjs.h
Compressed data written to src/html/vnc/copyrectjs.h
Compressed data written to src/html/vnc/hextilejs.h
Compressed data written to src/html/vnc/jpegjs.h
Compressed data written to src/html/vnc/rawjs.h
Compressed data written to src/html/vnc/rrejs.h
Compressed data written to src/html/vnc/tightjs.h
Compressed data written to src/html/vnc/tightpngjs.h
Compressed data written to src/html/vnc/zrlejs.h
Compressed data written to src/html/vnc/domkeytablejs.h
Compressed data written to src/html/vnc/fixedkeysjs.h
Compressed data written to src/html/vnc/gesturehandlerjs.h
Compressed data written to src/html/vnc/keyboardjs.h
Compressed data written to src/html/vnc/keysymjs.h
Compressed data written to src/html/vnc/keysymdefjs.h
Compressed data written to src/html/vnc/utiljs.h
Compressed data written to src/html/vnc/vkeysjs.h
Compressed data written to src/html/vnc/xtscancodesjs.h
Compressed data written to src/html/vnc/browserjs.h
Compressed data written to src/html/vnc/cursorjs.h
Compressed data written to src/html/vnc/elementjs.h
Compressed data written to src/html/vnc/eventsjs.h
Compressed data written to src/html/vnc/eventtargetjs.h
Compressed data written to src/html/vnc/intjs.h
Compressed data written to src/html/vnc/loggingjs.h
Compressed data written to src/html/vnc/md5js.h
Compressed data written to src/html/vnc/stringsjs.h
Compressed data written to src/html/vnc/commonjs.h
Compressed data written to src/html/vnc/adler32js.h
Compressed data written to src/html/vnc/constantsjs.h
Compressed data written to src/html/vnc/crc32js.h
Compressed data written to src/html/vnc/deflatejs.h
Compressed data written to src/html/vnc/gzheaderjs.h
Compressed data written to src/html/vnc/inffastjs.h
Compressed data written to src/html/vnc/inflatejs.h
Compressed data written to src/html/vnc/inftreesjs.h
Compressed data written to src/html/vnc/messagesjs.h
Compressed data written to src/html/vnc/treesjs.h
Compressed data written to src/html/vnc/zstreamjs.h
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-s3-devkitc-1.html
PLATFORM: Espressif 32 (6.12.0+sha.3c07680) > Espressif ESP32-S3-DevKitC-1-N8 (8 MB QD, No PSRAM)
HARDWARE: ESP32S3 240MHz, 320KB RAM, 8MB Flash
DEBUG: Current (esp-builtin) On-board (esp-builtin) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.0.5+sha.7018cd1 
 - framework-arduinoespressif32-libs @ 5.1.0+sha.d38afc77db.sha.1a029d5 
 - tool-esptoolpy @ 2.40900.250804 (4.9.0) 
 - toolchain-riscv32-esp @ 12.2.0+20230208 
 - toolchain-xtensa-esp32s3 @ 12.2.0+20230208
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 54 compatible libraries
Scanning dependencies...
Dependency Graph
|-- DuckScriptInterpreter @ 0.0.0+20251220105921.sha.80aa375
|-- ArduinoJson @ 7.4.2
|-- LinkedList @ 0.0.0-alpha+sha.dac3874d28
|-- Uptime Library @ 1.0.0+sha.81bb212
|-- AsyncTCPSock @ 1.0.2-dev
|-- Adafruit TinyUSB Library @ 0.0.0+sha.9305c9f
|-- ESPAsyncWebServer @ 3.6.0+sha.b8f1105
|-- ElegantOTA @ 3.1.0
|-- NimBLE-Arduino @ 1.4.3
|-- OneButton @ 2.6.1
|-- LovyanGFX @ 1.2.7
|-- MyLD2410 @ 1.0.13
|-- APA102 @ 3.0.0+sha.aa62193
|-- ESP32Marauder
|-- usb-ncm
|-- SD @ 3.0.5
|-- SPI @ 3.0.5
|-- FS @ 3.0.5
|-- LittleFS @ 3.0.5
|-- SPIFFS @ 3.0.5
|-- Wire @ 3.0.5
|-- WiFi @ 3.0.5
|-- DNSServer @ 3.0.5
|-- Update @ 3.0.5
|-- SD_MMC @ 3.0.5
|-- Preferences @ 3.0.5
|-- NetworkClientSecure @ 3.0.5
|-- WebServer @ 3.0.5
Building in release mode
Compiling .pio\build\LILYGO-T-Dongle-S3\src\src\Comms\Web\WebServer.cpp.o
Compiling .pio\build\LILYGO-T-Dongle-S3\src\src\html\htmlFiles.cpp.o
Archiving .pio\build\LILYGO-T-Dongle-S3\libcf7\libWiFi.a
Compiling .pio\build\LILYGO-T-Dongle-S3\libec1\ESPAsyncWebServer\ChunkPrint.cpp.o
Compiling .pio\build\LILYGO-T-Dongle-S3\libec1\ESPAsyncWebServer\Middleware.cpp.o
Compiling .pio\build\LILYGO-T-Dongle-S3\libec1\ESPAsyncWebServer\WebAuthentication.cpp.o
Compiling .pio\build\LILYGO-T-Dongle-S3\libec1\ESPAsyncWebServer\WebHandlers.cpp.o
Compiling .pio\build\LILYGO-T-Dongle-S3\libec1\ESPAsyncWebServer\WebRequest.cpp.o
Compiling .pio\build\LILYGO-T-Dongle-S3\libec1\ESPAsyncWebServer\WebResponses.cpp.o
Compiling .pio\build\LILYGO-T-Dongle-S3\libec1\ESPAsyncWebServer\WebServer.cpp.o
src/Comms/Web/WebServer.cpp: In function 'void webRequestHandler(AsyncWebServerRequest*)':
src/Comms/Web/WebServer.cpp:468:31: error: 'class HardwareStorage' has no member named 'exists'
  468 |     else if (Devices::Storage.exists(url.c_str()))
      |                               ^~~~~~
Compiling .pio\build\LILYGO-T-Dongle-S3\lib880\LittleFS\LittleFS.cpp.o
Compiling .pio\build\LILYGO-T-Dongle-S3\libe4f\Update\HttpsOTAUpdate.cpp.o
*** [.pio\build\LILYGO-T-Dongle-S3\src\src\Comms\Web\WebServer.cpp.o] Error 1
========================= [FAILED] Took 52.07 seconds =========================

Environment         Status    Duration
------------------  --------  ------------
LILYGO-T-Dongle-S3  FAILED    00:00:52.073
==================== 1 failed, 0 succeeded in 00:00:52.073 ====================
